# SPDX-License-Identifier: Apache-2.0
# Copyright(c) 2016-2022 Intel Corporation

sources = files('ctx.c',
    'event.c',
    'stream_table.c',
    'tcp_ofo.c',
    'tcp_stream.c',
    'tcp_rxtx.c',
    'udp_stream.c',
    'udp_rxtx.c')

headers = files('tle_ctx.h',
    'tle_event.h',
    'tle_tcp.h',
    'tle_udp.h')

deps += ['dring', 'memtank', 'misc', 'timer']
